# wikijump

./: .dockerignore  .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .mailmap  .prettierignore  .redocly.yaml  CODEOWNERS  DEADCODE.md  INSTALL  INSTALL.md  LICENSE  LICENSE.md  LICENSE.txt  Makefile  Procfile  README.md  SECURITY.md  app.json  composer.json  local-start.sh  new-licenses-snippet.sql  package-lock.json  package.json  phpunit.xml  readme.md  tsconfig.json  webpack.config.js  wikidotctl
api/: .tarpaulin.toml  Cargo.toml
api/misc/: header.txt
api/src/: main.rs
deepwell/: .clippy.toml  .env.example  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  config.example.toml
deepwell/.sqlx/: query-10b7a0b8d24801424fe14d7c6e2f489f17517b2c7c8cce9b017fdf0fcac81dd3.json  query-5d6d19f892ff29a761edde13f80e3adeba5aaf2e463fbb752741603fa985654b.json  query-815f031c3f54e91f97e4688c92b6c951f480dd34ea11eac80298817c4da932c0.json  query-c3b9b519cbdd6e6936318bc24556cc9b7e8a8d118584fa470b98b5869285a031.json
deepwell/importer/: __init__.py  __main__.py  constants.py  counter.py  database.py  generator.py  importer.py  old_structures.py  requirements.txt  s3.py  scuttle.py  seed.sql  site.py  sql.py  structures.py  utils.py  wikicomma.py  wikicomma_config.py
deepwell/migrations/: 20211211080753_initial.sql  20211226121106_page_link.sql  20220906090721_wikidot.sql  20220906090723_wikidot_drop.sql  20220906102710_wikidot_seed.sql  20220906103252_deepwell.sql  20220906103253_compatibility_ids.sql  20220906103253_deepwell_seed.sql
deepwell/misc/: config.toml  header.txt  statute-of-anne-license.txt  statute-of-anne.txt
deepwell/scripts/: generate-migration.sh  generate-models.sh  request.py  requirements.txt  upload.sh  wikicomma_import.py
deepwell/scripts/importer/: README.md  __init__.py  constants.py  counter.py  generator.py  requirements.txt  structures.py  utils.py  wikicomma.py
deepwell/seed/: join.ftml  members.ftml  page-tags.ftml  pages.json  recent-changes.ftml  users.json
deepwell/seeder/: filters.json  join.ftml  no-join.ftml  pages.json  platform-activity.ftml  platform-search.ftml  platform-sites.ftml  scp-002.ftml  scp-main.ftml  sidebar.ftml  sites.json  template-start.ftml  test-home.ftml  topbar.ftml  users.json  www-start.ftml
deepwell/src/: admin_notification.rs  api.rs  cache.rs  category_template.rs  comment_revision.rs  config.rs  constants.rs  database.rs  email_invitation.rs  failed_jobs.rs  file.rs  files_event.rs  forum_post_revision.rs  forum_thread.rs  front_forum_feed.rs  hash.rs  info.rs  ip_block.rs  json_utils.rs  locales.rs  macros.rs  main.rs  migrations.rs  mod.rs  moderator.rs  ozone_user_group_relation.rs  ozone_user_permission_modifier.rs  page.rs  page_connection_missing.rs  page_edit_lock.rs  password_resets.rs  prelude.rs  redis.rs  restart.rs  site.rs  types.rs  user_messages.rs  user_settings.rs  users.rs  utils.rs  (+1 more)
deepwell/src/actions/: locales.rs  mod.rs
deepwell/src/api/: internal.rs  mod.rs  utils.rs  v0.rs  v1.rs
deepwell/src/config/: args.rs  file.rs  mod.rs  object.rs  secrets.rs  serde.rs  special_action.rs
deepwell/src/database/: mod.rs  seeder.rs
deepwell/src/endpoints/: auth.rs  blob.rs  category.rs  domain.rs  email.rs  file.rs  file_revision.rs  info.rs  link.rs  locale.rs  message.rs  misc.rs  mod.rs  page.rs  page_revision.rs  parent.rs  site.rs  site_domain.rs  site_member.rs  text.rs  user.rs  user_bot.rs  view.rs  vote.rs
deepwell/src/hash/: blob.rs  mod.rs  text.rs
deepwell/src/locales/: arguments.rs  error.rs  fallback.rs  fluent.rs  gettext.rs  mod.rs
deepwell/src/methods/: auth.rs  authentication.rs  category.rs  file.rs  file_revision.rs  link.rs  locale.rs  locales.rs  misc.rs  mod.rs  page.rs  page_revision.rs  parent.rs  revision.rs  site.rs  text.rs  user.rs  user_bot.rs  view.rs  vote.rs  web.rs
deepwell/src/models/: admin.rs  alias.rs  job.rs  (+73 more)
ftml/: .gitattributes  .gitignore  .rustfmt.toml  .tarpaulin.toml  .travis.yml  Cargo.toml  Philosophy.md  README.md  Serialization.md  ServerRoutes.md  _todo  a.out  build.rs  paragraphs.md  scp-1730.ftml  test.c
ftml/.travis/: banner.sh  clippy.sh
ftml/conf/: blocks.schema.toml  blocks.toml  modules.schema.toml  modules.toml
ftml/docs/: Blocks.md  Modules.md  Philosophy.md  Serialization.md  ServerRoutes.md
ftml/examples/: validate_json.rs
ftml/ftml-bin/: Cargo.toml
ftml/ftml-http/: Cargo.toml  build.rs
ftml/ftml-rpc/: Cargo.toml  README.md
ftml/ftml-server/: Cargo.toml
ftml/misc/: bench-output.txt  ffi_test.c  ffi_test.sh  ftml-base.css  fuzzer-grammar.json  github-text-wiki.url  header.txt
ftml/scripts/: ast_diff.py  ast_diff.sh  ast_stub.sh  check_conf-requirements.txt  check_conf.py  validate_json.sh
ftml/src/: bench.rs  bibliography.rs  data.rs  enums.rs  error.rs  ffi.rs  handle.rs  id_prefix.rs  info.rs  lib.rs  log.rs  macros.rs  main.rs  next_index.rs  non_empty_vec.rs  page_info.rs  parse.rs  settings.rs  span_wrap.rs  test.rs  text.rs  token.rs  tokenize.rs  tokenizer.rs  tree.rs  url.rs  user_info.rs  utf16.rs  utils.rs  wikidot.pest
ftml/test/: 026-exploration-logs.ftml  026-exploration-logs.html  026-exploration-logs.json  026-exploration-logs.txt  __list-bullet.json  align-center.html  align-center.json  align-deep.html  align-deep.json  align-deep.txt  align-fail.html  align-fail.json  align-fail.txt  align-justify.html  align-justify.json  align-justify.txt  align-left.html  align-left.json  align-left.txt  align-right.html  align-right.json  anchor-alias-special-empty.json  anchor-alias-special.json  anchor-alias-star-empty.html  anchor-alias-star-empty.json  anchor-alias-star.html  anchor-alias-star.json  anchor-alias-star.txt  anchor-alias-wrap.html  anchor-alias-wrap.json  anchor-alias-wrap.txt  anchor-alias.json  anchor-alias.txt  anchor-empty.html  anchor-empty.json  anchor-name-dash.html  anchor-name-dash.json  anchor-name-fail-space.html  anchor-name-fail-space.json  anchor-name-fail-space.txt  (+1969 more)
locales/validator/: .gitignore  Cargo.toml  README.md
(+12795 files in other folders)
