[package]
name = "wikijump-api"
description = "API provider and database manager for Wikijump"
repository = "https://github.com/scpwiki/wikijump/tree/develop/ftml"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikijump", "api", "backend"]
categories = ["asynchronous", "database", "web-programming::http-server"]
exclude = [".gitignore", ".editorconfig"]

version = "0.0.1"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2021" # this is *not* the same as the current year
rust-version = "1.56.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
tide = "0.16"
tokio = { version = "1.14", features = ["rt-multi-thread", "macros"] }

# Performance options

[profile.release]
lto = true
