[package]
name = "deepwell"
description = "DEEPWELL - Wikijump API provider and database manager"
repository = "https://github.com/scpwiki/wikijump/tree/develop/deepwell"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikijump", "api", "backend", "wiki"]
categories = ["asynchronous", "database", "web-programming::http-server"]
exclude = [".gitignore", ".editorconfig"]

version = "2023.5.14"
authors = ["Emmie Maeda <emmie.maeda@gmail.com>"]
edition = "2021" # this is *not* the same as the current year

[dependencies]
anyhow = "1"
arraystring = "0.3"
argon2 = "0.5"
async-std = { version = "1", features = ["attributes"] }
clap = "4"
color-backtrace = "0.6"
crossfire = "1.0"
cuid2 = "0.1"
data-encoding = "2"
dotenvy = "0.15"
either = "1"
filemagic = "0.12"
fluent = "0.16"
ftml = { version = "1.22", features = ["mathml"] }
futures = { version = "0.3", features = ["async-await"], default-features = false }
hex = "0.4"
hostname = "0.3"
intl-memoizer = "0.5"
lazy_static = "1"
otp = { git = "https://github.com/TimDumol/rust-otp" }
rand = "0.8"
ref-map = "0.1"
regex = "1"
rust-s3 = { version = "0.32", features = ["with-async-std"], default-features = false }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-async-std-rustls", "postgres-array", "macros", "with-json", "with-time"], default-features = false }
sea-query = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["macros", "migrate", "postgres", "runtime-async-std-rustls"], default-features = false }
str-macro = "1"
strum = "0.25"
strum_macros = "0.25"
subtle = "2.4"
surf = "2.3.2"
thiserror = "1"
tide = "0.16"
time = { version = "0.3", features = ["parsing", "serde", "serde-human-readable"], default-features = false }
tiny-keccak = { version = "2", features = ["k12"] }
toml = { version = "0.7", features = ["parse"] }
typenum = "1"
unic-langid = "0.9"
unicase = "2"
void = "1"
wikidot-normalize = "0.11"
wikidot-path = "0.5"

# NOTE: "indexmap" was formerly pinned to "=1.6.2" to avoid a cyclic dependency issue.
#       This seems to no longer be necessary, but the comment is kept here in case it becomes a problem again.
#       See: https://stackoverflow.com/questions/68399961
#            https://github.com/tkaitchuck/aHash/issues/95

[build-dependencies]
built = { version = "0.6", features = ["git2"] }

# Performance options

[profile.release]
lto = true
