[package]
name = "deepwell"
description = "DEEPWELL - Wikijump API provider and database manager"
repository = "https://github.com/scpwiki/wikijump/tree/develop/deepwell"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikijump", "api", "backend", "wiki"]
categories = ["asynchronous", "database", "web-programming::http-server"]
exclude = [".gitignore", ".editorconfig"]

version = "2024.10.6"
authors = ["Emmie Smith <emmie.maeda@gmail.com>"]
edition = "2021"

[features]
watch = ["notify"]

[dependencies]
anyhow = "1"
argon2 = "0.5"
arraystring = "0.3"
async-trait = "0.1"  # remove when trait async fn enhancements land
bb8 = "0.8"
cfg-if = "1"
clap = "4"
color-backtrace = "0.6"
cuid2 = "0.1"
data-encoding = "2"
dotenvy = "0.15"
either = "1"
femme = "2"
filemagic = "0.13"
fluent = "0.16"
fluent-syntax = "0"
ftml = { version = "1.27", features = ["mathml"] }
futures = { version = "0.3", features = ["async-await"], default-features = false }
hex = { version = "0.4", features = ["serde"] }
hostname = "0.4"
intl-memoizer = "0.5"
jsonrpsee = { version = "0.24", features = ["macros", "server"] }
log = "0.4"
notify = { version = "6", optional = true }
once_cell = "1"
paste = "1"
rand = "0.8"
redis = { version = "0.25", features = ["aio", "connection-manager", "keep-alive", "tokio-comp", "tokio-rustls-comp"] }
ref-map = "0.1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rsmq_async = "12"
rust-s3 = { version = "0.35", features = ["with-tokio", "tokio-rustls"] }
rust-otp = "2"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "postgres-array", "macros", "with-json", "with-time"], default-features = false }
sea-query = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
str-macro = "1"
strum = "0.26"
strum_macros = "0.26"
subtle = "2.6"
thiserror = "1"
time = { version = "0.3", features = ["parsing", "serde"], default-features = false }
tiny-keccak = { version = "2", features = ["k12"] }
toml = { version = "0.8", features = ["parse"] }
tokio = { version = "1", features = ["full"] }
typenum = "1"
unic-langid = "0.9"
unicase = "2"
wikidot-normalize = "0.12"
wikidot-path = "0.6"

[build-dependencies]
built = { version = "0.7", features = ["git2"] }

# Warnings and Errors

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "deny"

[lints.clippy]
large_enum_variant = "allow"

# Performance options

[profile.release]
lto = true
