[package]
name = "ftml"
description = "Foundation Text Markup Language - a library to render Wikidot text as HTML"
repository = "https://github.com/scpwiki/wikijump/tree/develop/ftml"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikidot", "wikijump", "ftml", "parsing", "html"]
categories = []
exclude = [".gitignore", ".github"]

version = "1.12.4"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2021" # this is *not* the same as the current year
rust-version = "1.56.0"

[lib]
name = "ftml"
crate-type = ["cdylib", "lib"]

[features]
default  = ["ffi", "log", "mathml"]
# If removed, then FFI integrations are not included in the crate.
# This feature does not build even if included if the target is "wasm32".
ffi      = ["parking_lot", "slog-bunyan"]
# If removed, then logging is cut out entirely -- replaces slog macros with no-ops.
log      = ["slog"]
# Enables console.log() logging. Spams your browser, caveat emptor!
wasm-log = []
# Adds LaTeX -> MathML support for rendering.
mathml   = ["latex2mathml"]

[dependencies]
cfg-if = "1"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
entities = "1"
enum-map = "1"
latex2mathml = { version = "0.2", optional = true }
lazy_static = "1"
maplit = "1"
pest = "2"
pest_derive = "2"
rand = { version = "0.8", features = ["small_rng"] }
ref-map = "0.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
slog = { version = "2.7", optional = true }
str-macro = "1"
strum = "0.22"
strum_macros = "0.23"
tinyvec = "1"
unicase = "2"
void = "1"
wikidot-normalize = "0.9"

[build-dependencies]
built = { version = "0.5", features = ["chrono", "git2"] }
cbindgen = "0.20"

[dev-dependencies]
proptest = "1"
sloggers = "2"
termcolor = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
self_cell = "0.10"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["console"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parking_lot = { version = "0.11", optional = true }
slog-bunyan = { version = "2", optional = true }

# Performance options

[profile.release]
lto = true
