[package]
name = "ftml"
description = "Foundation Text Markup Language - a library to render Wikidot text as HTML"
repository = "https://github.com/scpwiki/wikijump/tree/develop/ftml"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikidot", "wikijump", "ftml", "parsing", "html"]
categories = ["parser-implementations"]
exclude = [".gitignore", ".editorconfig"]

version = "1.13.0"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2021" # this is *not* the same as the current year
rust-version = "1.57.0"

[lib]
name = "ftml"
crate-type = ["cdylib", "lib"]

[features]
default  = ["mathml"]
# Adds LaTeX -> MathML support for rendering.
mathml   = ["latex2mathml"]

[dependencies]
cfg-if = "1"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
entities = "1"
enum-map = "2"
latex2mathml = { version = "0.2", optional = true }
lazy_static = "1"
log = "0.4"
maplit = "1"
pest = "2"
pest_derive = "2"
rand = { version = "0.8", features = ["small_rng"] }
ref-map = "0.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
str-macro = "1"
strum = "0.24"
strum_macros = "0.24"
tinyvec = "1"
unicase = "2"
void = "1"
wikidot-normalize = "0.9"

[build-dependencies]
built = { version = "0.5", features = ["chrono", "git2"] }
cbindgen = "0.20"

[dev-dependencies]
proptest = "1"
sloggers = "2"
termcolor = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
self_cell = "0.10"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["console"] }

# Performance options

[profile.release]
lto = true
