[package]
name = "ftml"
description = "Foundation Text Markup Language - a library to render Wikidot text as HTML"
repository = "https://github.com/scpwiki/wikijump/tree/develop/ftml"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikidot", "wikijump", "ftml", "parsing", "html"]
categories = ["parser-implementations"]
exclude = [".gitignore", ".editorconfig"]

version = "1.22.1"
authors = ["Emmie Maeda <emmie.maeda@gmail.com>"]
edition = "2021" # this is *not* the same as the current year

[lib]
name = "ftml"
crate-type = ["cdylib", "lib"]

[features]
default  = ["html", "mathml"]
# Adds HTML rendering.
html     = ["parcel_css"]
# Adds LaTeX -> MathML support for rendering.
mathml   = ["html", "latex2mathml"]

[dependencies]
cfg-if = "1"
enum-map = "2"
entities = "1"
latex2mathml = { version = "0.2", optional = true }
log = "0.4"
maplit = "1"
once_cell = "1.17.1"
parcel_css = { version = "1.0.0-alpha.32", optional = true }
parcel_selectors = "=0.24.7"  # this is *not* a required dependency,
                              # but we are pinning it since 0.24.8 does
                              # not build correctly. it is not an ftml issue.
pest = "2"
pest_derive = "2"
rand = { version = "0.8", features = ["small_rng"] }
ref-map = "0.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde-wasm-bindgen = "0.5"
str-macro = "1"
strum = "0.25"
strum_macros = "0.25"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde", "serde-human-readable"], default-features = false }
tinyvec = "1"
unicase = "2"
wikidot-normalize = "0.11"

[build-dependencies]
built = { version = "0.6", features = ["chrono", "git2"] }

[dev-dependencies]
proptest = "1"
termcolor = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
self_cell = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["console"] }

# Performance options

[profile.release]
lto = true
