[package]
name = "ftml-bin"
description = "Foundation Text Markup Language - a library to convert Wikidot code to HTML"
repository = "https://github.com/Nu-SCPTheme/ftml"
readme = "../README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikidot", "ftml", "parsing", "rendering", "html"]
categories = []

version = "0.0.1"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml
workspace = ".."

[dependencies]
clap = "2"
ftml = { path = ".." }
notify = "4.0"
serde_json = "1"
str-macro = "0.1"
