[package]
name = "ftml-http"
description = "Foundation Text Markup Language - server to render Wikidot text as HTML"
repository = "https://github.com/scpwiki/wikijump/tree/develop/ftml/ftml-http"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikidot", "wikijump", "ftml", "parsing", "html"]
categories = []
exclude = [".gitignore"]

version = "0.5.0"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml version

[dependencies]
clap = "2"
ftml = { path = ".." }
hostname = "0.3"
lazy_static = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slog = "2.7"
slog-bunyan = "2"
sloggers = "1"
str-macro = "1"
tera = "1.6"
thiserror = "1"
tokio = { version = "0.2", features = ["macros"] }
users = "0.11"
warp = { version = "0.2", features = ["compression"] }
