[package]
name = "ftml-rpc"
description = "Foundation Text Markup Language - an RPC server to provide ftml parsing or rendering"
repository = "https://github.com/Nu-SCPTheme/ftml"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikidot", "ftml", "parsing", "rendering", "html"]
categories = ["asynchronous"]
exclude = [".gitignore", ".travis.yml"]

version = "0.0.1"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml version
workspace = ".."

[dependencies]
color-backtrace = "0.3"
ftml = "0.2.19"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tarpc = "0.20"
tokio = { version = "0.2", features = ["full"] }
tokio-serde = { version = "0.6", features = ["json"] }
toml = "0.5"
