[package]
name = "ftml-server"
description = "Foundation Text Markup Language - server to render Wikidot code as HTML"
repository = "https://github.com/Nu-SCPTheme/ftml"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikidot", "ftml", "parsing", "rendering", "html"]
categories = []
exclude = [".gitignore", ".github"]

version = "0.3.1"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml version

[dependencies]
ftml = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
warp = "0.2"
